Fixed white space

--- a/vulcantunes/src/app/ui/(overview)/page/styles/_mixins.scss
+++ b/vulcantunes/src/app/ui/(overview)/page/styles/_mixins.scss
@@ -1,10 +1,16 @@
 @mixin respond-to($breakpoint) {
   @if $breakpoint == "tablet" {
-    @media (min-width: 768px) { @content; }
+    @media (min-width: 768px) {
+      @content;
+    }
   } @else if $breakpoint == "desktop" {
-    @media (min-width: 1024px) { @content; }
+    @media (min-width: 1024px) {
+      @content;
+    }
   } @else if $breakpoint == "large-desktop" {
-    @media (min-width: 1200px) { @content; }
+    @media (min-width: 1200px) {
+      @content;
+    }
   }
 }
 
